--- a/app/views/document_associations/_document_association_for_document.html.haml
+++ b/app/views/document_associations/_document_association_for_document.html.haml
@@ -1,4 +1,4 @@
-%table.table.table-striped.table-condensed
+%table.table.table-condensed
   %thead
     %tr
       %th.col-sm-3= translate_helper("document_associations_associable_date_heading")
