--- a/app/views/drivers/index.html.haml
+++ b/app/views/drivers/index.html.haml
@@ -14,7 +14,7 @@
         %input#show_active_only{type: 'checkbox'}
           = translate_helper(:show_inactive)
   .col-sm-12
-    %table#drivers_table.table.table-striped.table-bordered
+    %table#drivers_table.basic-table
       %thead
         %tr
           %th.col-sm-2= translate_helper("driver_form_name")
