--- a/app/views/customers/_ridership_mobility_edit.html.haml
+++ b/app/views/customers/_ridership_mobility_edit.html.haml
@@ -1,4 +1,4 @@
-%table.table.table-bordered.table-hover.table-condensed.inline-editing-table
+%table.table.table-hover.table-condensed.inline-editing-table
   %thead
     %tr.report-header
       %th
