--- a/app/views/documents/_form.html.haml
+++ b/app/views/documents/_form.html.haml
@@ -7,32 +7,38 @@
           - @document.errors.full_messages.each do |msg|
             %li= msg
   .row
-    .col-md-12
+    .col-sm-12.col-md-6
       .panel.panel-primary
         .panel-body.form-horizontal
           .form-group
-            = f.label :description, translate_helper("document_form_description"), class: "col-md-3 control-label"
-            .col-md-9
+            .form-label
+              = f.label :description, translate_helper("document_form_description"), class: "col-md-3 control-label"
+            .form-field
               = f.text_field :description, class: "form-control"
           .form-group
-            = f.label :document, translate_helper("document_form_file_name"), class: "col-md-3 control-label"
-            .col-md-9
-              = f.file_field :document, class: "form-control", html: { "aria-describedby" => (@document.persisted? ? "document_form_file_name_current" : "") }
+            .form-label
+              = f.label :document, translate_helper("document_form_file_name"), class: "col-md-3 control-label"
+            .form-field
+              = f.file_field :document, html: { "aria-describedby" => (@document.persisted? ? "document_form_file_name_current" : "") }
+              -# the above approach the the file field follows this demo https://tympanus.net/Tutorials/CustomFileInputs/
               - if @document.persisted?
                 %span#document_form_file_name_current.help-block
                   = translate_helper("document_form_file_name_currently")
                   "#{link_to @document.document_file_name, @document.document.url, target: "_blank"}"
           - if @document.persisted?
             .form-group
-              = label_tag "", translate_helper("document_form_file_size"), class: "col-md-3 control-label"
-              .col-md-9
+              .form-label
+                = label_tag "", translate_helper("document_form_file_size"), class: "col-md-3 control-label"
+              .form-field
                 %p.form-control-static= number_to_human_size @document.document_file_size
             .form-group
-              = label_tag "", translate_helper("document_form_upload_date"), class: "col-md-3 control-label"
-              .col-md-9
+              .form-label
+                = label_tag "", translate_helper("document_form_upload_date"), class: "col-md-3 control-label"
+              .form-field
                 %p.form-control-static= @document.document_updated_at.to_s(:long)
         / END .panel-body
       / END .panel
+    .col-sm-12.col-md-6
       .panel.panel-primary
         .panel-heading= translate_helper("document_associations_associables_heading")
         = render partial: "document_associations/document_association_for_document", locals: {document_associations: @document.document_associations}
