--- a/app/views/drivers/new.html.haml
+++ b/app/views/drivers/new.html.haml
@@ -1,8 +1,7 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'drivers'
-#page-header.row
-  .col-sm-12.col-md-6
-    %h1= translate_helper("new_driver_heading")
-  .col-sm-12.col-md-6
+#page-header
+  %h1.page-title= translate_helper("new_driver_heading")
+  .action-buttons
     - if can? :manage, @driver
       .pull-right
         %button#driver_form_submit.btn.action-button
