--- a/app/views/vehicles/new.html.haml
+++ b/app/views/vehicles/new.html.haml
@@ -1,13 +1,11 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'vehicles'
-#page-header.row
-  .col-sm-12.col-md-6
-    %h1= translate_helper("new_vehicle_heading")
-  .col-sm-12.col-md-6
-    - if can? :manage, @vehicle
-      .pull-right
-        %button#vehicle_form_submit.btn.action-button
-          = translate_helper("save")
-        = link_to translate_helper("cancel"), vehicles_path, class: "btn action-button"
+#page-header
+  %h1.page-title= translate_helper("new_vehicle_heading")
+  - if can? :manage, @vehicle
+    .action-buttons
+      %button#vehicle_form_submit.btn.action-button
+        = translate_helper("save")
+      = link_to translate_helper("cancel"), vehicles_path, class: "btn action-button"
 = render :partial=>"form"
 
 :javascript
