--- a/app/views/customers/_add_travel_training_dialog.html.haml
+++ b/app/views/customers/_add_travel_training_dialog.html.haml
@@ -12,16 +12,16 @@
               = translate_helper(:add_travel_training_dialog_title)
         .modal-body.row{:style => "text-align:left;"}
           .form-group.col-sm-12
-            .col-sm-3
+            .form-label
               = f.label :date, translate_helper("travel_training_date")
-            .col-sm-9  
+            .form-field
               .input-group.datepicker-icon
                 = f.text_field :date, :value => format_time_for_listing_day(Time.current), class: 'datepicker form-control', required: true, readonly: true
                 .input-group-btn
                   %button.btn.btn-default{:type => "button"}
                     = image_tag "calendar-clock.png"
           .form-group.col-sm-12
-            .col-sm-3
+            .form-label
               = f.label :comment, translate_helper(:travel_training_comment) 
-            .col-sm-9
+            .form-field
               = f.text_area :comment, class: 'form-control', required: true
