--- a/app/views/customers/_providers_panel.html.haml
+++ b/app/views/customers/_providers_panel.html.haml
@@ -16,7 +16,8 @@
           - else
             %li= provider_name
     - else
-      = f.association :authorized_providers, collection: Provider.active.order("lower(name)"), as: :check_boxes, label: false, :item_wrapper_class => 'col-md-12', :label_html => { :class => 'col-md-12', :wrapper => false }
+      .col-sm-12
+        = f.association :authorized_providers, collection: Provider.active.order("lower(name)"), as: :check_boxes, label: false, :item_wrapper_class => 'col-md-12', :label_html => { :class => 'col-md-12', :wrapper => false }
 
 :javascript
   $(document).ready(function() {
