--- a/app/views/vehicle_maintenance_compliances/_form.html.erb
+++ b/app/views/vehicle_maintenance_compliances/_form.html.erb
@@ -18,32 +18,42 @@
       <div class="panel panel-primary">
         <div class="panel-body form-horizontal">
           <div class="form-group">
-            <%= f.label :vehicle_maintenance_schedule, translate_helper("vehicle_maintenance_compliance_form_schedule"), class: "col-md-3 control-label" %>
-            <div class="col-md-9">
+            <div class="form-label">
+              <%= f.label :vehicle_maintenance_schedule, translate_helper("vehicle_maintenance_compliance_form_schedule"), class: "col-md-3 control-label" %>
+            </div>
+            <div class="form-field">
               <%= f.collection_select :vehicle_maintenance_schedule_id, @vehicle_maintenance_schedules.order(:name), :id, :name, { include_blank: true }, { class: "form-control", id: 'vehicle_maintenance_schedule', disabled: @readonly } %>
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :event, translate_helper("vehicle_maintenance_compliance_form_event"), class: "col-md-3 control-label" %>
-            <div class="col-md-9">
+            <div class="form-label">
+              <%= f.label :event, translate_helper("vehicle_maintenance_compliance_form_event"), class: "col-md-3 control-label" %>
+            </div>
+            <div class="form-field">
               <%= f.text_field :event, class: "form-control", disabled: @readonly %>
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :notes, translate_helper("vehicle_maintenance_compliance_form_notes"), class: "col-md-3 control-label" %>
-            <div class="col-md-9">
+            <div class="form-label">
+              <%= f.label :notes, translate_helper("vehicle_maintenance_compliance_form_notes"), class: "col-md-3 control-label" %>
+            </div>
+            <div class="form-field">
               <%= f.text_area :notes, class: "form-control", rows: 3, disabled: @readonly %>
             </div>
           </div>
           <div class="form-group due-type-mileage">
+            <div class="form-label">
             <%= f.label :due_mileage, translate_helper("vehicle_maintenance_compliance_form_due_mileage"), class: "col-md-3 control-label" %>
-            <div class="col-md-9">
+            </div>
+            <div class="form-field">
               <%= f.number_field :due_mileage, min: 1, class: "form-control", disabled: @readonly %>
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :compliance_date, translate_helper("vehicle_maintenance_compliance_form_compliance_date"), class: "col-md-3 control-label" %>
-            <div class="col-md-9">
+            <div class="form-label">
+              <%= f.label :compliance_date, translate_helper("vehicle_maintenance_compliance_form_compliance_date"), class: "col-md-3 control-label" %>
+            </div>
+            <div class="form-field">
               <div class="input-group datepicker-icon">
                 <%= f.text_field :compliance_date, class: "form-control datepicker", disabled: @readonly %>
                 <% unless @readonly %>
@@ -57,8 +67,10 @@
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :compliance_mileage, translate_helper("vehicle_maintenance_compliance_form_compliance_mileage"), class: "col-md-3 control-label" %>
-            <div class="col-md-9">
+            <div class="form-label">
+              <%= f.label :compliance_mileage, translate_helper("vehicle_maintenance_compliance_form_compliance_mileage"), class: "col-md-3 control-label" %>
+            </div>
+            <div class="form-field">
               <%= f.number_field :compliance_mileage, min: 1, class: "form-control", disabled: @readonly %>
             </div>
           </div>
