--- a/app/views/vehicle_maintenance_events/_form.html.erb
+++ b/app/views/vehicle_maintenance_events/_form.html.erb
@@ -18,8 +18,10 @@
       <div class="panel panel-primary">
         <div class="panel-body form-horizontal">
           <div class="form-group">
-            <%= f.label :service_date, translate_helper("service_date"), class: "col-md-3 control-label" %>
-            <div class="col-md-9">
+            <div class="form-label">
+              <%= f.label :service_date, translate_helper("service_date"), class: "col-md-3 control-label" %>
+            </div>
+            <div class="form-field">
               <div class="input-group datepicker-icon">
                 <%= f.text_field :service_date, class: "form-control datepicker", disabled: @readonly %>
                 <% unless @readonly %>
@@ -33,20 +35,26 @@
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :odometer, translate_helper("odometer"), class: "col-md-3 control-label" %>
-            <div class="col-md-9">
+            <div class="form-label">
+              <%= f.label :odometer, translate_helper("odometer"), class: "col-md-3 control-label" %>
+            </div>
+            <div class="form-field">
               <%= f.text_field :odometer, class: "form-control", disabled: @readonly %>
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :vendor_name, translate_helper("vendor_name"), class: "col-md-3 control-label" %>
-            <div class="col-md-9">
+            <div class="form-label">
+              <%= f.label :vendor_name, translate_helper("vendor_name"), class: "col-md-3 control-label" %>
+            </div>
+            <div class="form-field">
               <%= f.text_field :vendor_name, class: "form-control", disabled: @readonly %>
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :invoice_date, translate_helper("invoice_date"), class: "col-md-3 control-label" %>
-            <div class="col-md-9">
+            <div class="form-label">
+              <%= f.label :invoice_date, translate_helper("invoice_date"), class: "col-md-3 control-label" %>
+            </div>
+            <div class="form-field">
               <div class="input-group datepicker-icon">
                 <%= f.text_field :invoice_date, class: "form-control datepicker", disabled: @readonly %>
                 <% unless @readonly %>
@@ -60,26 +68,34 @@
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :invoice_number, translate_helper("invoice_number"), class: "col-md-3 control-label" %>
-            <div class="col-md-9">
+            <div class="form-label">
+              <%= f.label :invoice_number, translate_helper("invoice_number"), class: "col-md-3 control-label" %>
+            </div>
+            <div class="form-field">
               <%= f.text_field :invoice_number, class: "form-control", disabled: @readonly %>
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :invoice_amount, translate_helper("invoice_amount"), class: "col-md-3 control-label" %>
-            <div class="col-md-9">
+            <div class="form-label">
+              <%= f.label :invoice_amount, translate_helper("invoice_amount"), class: "col-md-3 control-label" %>
+            </div>
+            <div class="form-field">
               <%= f.text_field :invoice_amount, class: "form-control", disabled: @readonly %>
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :reimbursable, translate_helper("reimbursable"), class: "col-md-3 control-label" %>
-            <div class="col-md-9">
+            <div class="form-label">
+              <%= f.label :reimbursable, translate_helper("reimbursable") %>
+            </div>
+            <div class="form-field">
               <%= f.select :reimbursable, [["Yes", "true"], ["No", "false"]], {:selected => @vehicle_maintenance_event.reimbursable.to_s }, class: "form-control", disabled: @readonly %>
             </div>
           </div>  
           <div class="form-group">
-            <%= f.label :services_performed, translate_helper("services_performed"), class: "col-md-3 control-label" %>
-            <div class="col-md-9">
+            <div class="form-label">
+              <%= f.label :services_performed, translate_helper("services_performed"), class: "col-md-3 control-label" %>
+            </div>
+            <div class="form-field">
               <%= f.text_area :services_performed, class: "form-control", rows: 3, disabled: @readonly %>
             </div>
           </div>
