--- a/app/views/vehicle_maintenance_schedule_types/_form.html.erb
+++ b/app/views/vehicle_maintenance_schedule_types/_form.html.erb
@@ -16,8 +16,10 @@
   <div class="row">
     <div class="col-md-12">
       <div class="form-group">
-        <%= f.label :name, translate_helper("vehicle_maintenance_schedule_type_name"), class: "col-md-3 control-label" %>
-        <div class="col-md-9">
+        <div class="form-label">
+          <%= f.label :name, translate_helper("vehicle_maintenance_schedule_type_name"), class: "col-md-3 control-label" %>
+        </div>
+        <div class="form-field">
           <%= f.text_field :name, class: "form-control", required: true %>
         </div>
       </div>
