--- a/app/views/vehicle_warranties/_form.html.haml
+++ b/app/views/vehicle_warranties/_form.html.haml
@@ -12,21 +12,24 @@
       .panel.panel-primary
         .panel-body.form-horizontal
           .form-group
-            .col-md-3.control-label
+            .form-label
               %label= translate_helper("vehicle_warranty_type")
-            .col-md-9
+            .form-field
               = select_tag "vehicle_warranty_template", options_for_select(VehicleWarrantyTemplate.by_provider(current_provider_id).pluck(:name, :id)), include_blank: true, class: 'form-control', id: "vehicle_warranty_template", disabled: @readonly 
           .form-group
-            = f.label :description, translate_helper("vehicle_warranty_form_description"), class: "col-md-3 control-label"
-            .col-md-9
+            .form-label
+              = f.label :description, translate_helper("vehicle_warranty_form_description"), class: "col-md-3 control-label"
+            .form-field
               = f.text_field :description, class: "form-control", disabled: @readonly 
           .form-group
-            = f.label :notes, translate_helper("vehicle_warranty_form_notes"), class: "col-md-3 control-label"
-            .col-md-9
+            .form-label
+              = f.label :notes, translate_helper("vehicle_warranty_form_notes"), class: "col-md-3 control-label"
+            .form-field
               = f.text_area :notes, class: "form-control", rows: 3, disabled: @readonly 
           .form-group
-            = f.label :expiration_date, translate_helper("vehicle_warranty_form_expiration_date"), class: "col-md-3 control-label"
-            .col-md-9
+            .form-label
+              = f.label :expiration_date, translate_helper("vehicle_warranty_form_expiration_date"), class: "col-md-3 control-label"
+            .form-field
               .input-group.datepicker-icon
                 = f.text_field :expiration_date, class: "form-control datepicker", disabled: @readonly
                 - unless @readonly 
