--- a/app/views/trips/index.html.haml
+++ b/app/views/trips/index.html.haml
@@ -20,11 +20,8 @@
     = render 'list'
 - else
   .col-md-9
-    .cancel-selected-trips.dropdown{style: 'margin-bottom: 5px;'}
-      .pull-right
-        %span{style: 'font-size: large;'}
-          %b= translate_helper(:total_trips_text) % {trips_count: @trips.size}
-      .table-action-buttons  
+    .col-md-6{style: 'padding: 0px;'}
+      .table-action-buttons.cancel-selected-trips.dropdown
         %button.btn.btn-primary.dropdown-toggle{type: 'button', data: {toggle: 'dropdown'}} 
           =translate_helper(:change_selected_trips_result)
           %span.caret
@@ -37,6 +34,9 @@
               %a{href: '#', 'data-trip-result-id' => tr[1] }
                 =tr[0]
         = link_to "Report", report_trips_path, class: 'btn action-button'
+    .col-md-6{style: 'padding: 0px;'}
+      %span.pull-right{style: 'font-size: large;'}
+        %b= translate_helper(:total_trips_text) % {trips_count: @trips.size}
     = render 'list'
 
   = render 'trips/trip_result_reason_dialog'
