--- a/app/assets/stylesheets/ridepilot-ui.scss
+++ b/app/assets/stylesheets/ridepilot-ui.scss
@@ -397,8 +397,8 @@ fieldset {
 }
 
 .overdue-warning {
-  background-color: $yellow !important;
-  color: $blue !important;
+  background-color: $yellow-raw !important;
+  color: $blue-raw !important;
 }
 
 .panel-success {
