--- a/app/assets/stylesheets/v1_theme.scss
+++ b/app/assets/stylesheets/v1_theme.scss
@@ -469,7 +469,7 @@ fieldset div.group label, .ui-widget fieldset div.group label {
 }
 
 form div.actions {
-  border-top: 1px solid #bbb;
+  //border-top: 1px solid #bbb;
   padding-top: 10px;
   clear: both;
   margin: 0 0 10px;
