--- a/app/views/users/show_change_email.html.erb
+++ b/app/views/users/show_change_email.html.erb
@@ -24,7 +24,7 @@
     </li>  
     <li>
       <%= f.label :email, translate_helper("new_email") %>
-      <%= f.email_field :email %>
+      <%= f.email_field :email, class: 'form-control' %>
     </li>
   </ol>
   <div class="actions">
